# libnspire-rs

./: Cargo.toml  README.md
libnspire/: Cargo.toml  README.md
libnspire-sys/: Cargo.toml  build.rs
libnspire-sys/libnspire/src/: config.h  cx2.cpp  cx2.h  data.c  endianconv.h  init.c  packet.c  packet.h  usb.c  usb.h
libnspire-sys/libnspire/src/api/: handle.h  nspire.h  screenshot.h
libnspire-sys/libnspire/src/services/: file.c  os.c  screenshot.c
libnspire-sys/src/: bindings.rs
libnspire/examples/: info.rs  json.rs  upload.rs
libnspire/src/: callback.rs  dir.rs  error.rs  info.rs  lib.rs
