[package]
name = "libnspire"
description = "high-level bindings to libnspire for USB interaction with TI Nspire calculators"
version = "0.2.0"
authors = ["lights0123 <developer@lights0123.com>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/lights0123/libnspire-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["image", "serde"]

[dependencies]
array_iterator = "0.2.4"
libnspire-sys = "0.2.0"
libusb1-sys = "0.4.2"
image = { version = "0.23.9", default-features = false, optional = true }
serde = { version = "1.0.116", features = ["derive"], optional = true }
rusb = "0.6.4"
thiserror = "1.0.20"
displaydoc = "0.1"

[dev-dependencies]
image = { version = "0.23.9" }
serde_json = "1.0.57"
